[gd_scene load_steps=17 format=3 uid="uid://ycjht4w144b0"]

[ext_resource type="Script" path="res://scripts/computer/stencil_portal.gd" id="1_8cnrc"]
[ext_resource type="Shader" path="res://scripts/computer/stencil_shader.gdshader" id="4_4hpxy"]

[sub_resource type="QuadMesh" id="QuadMesh_23lrc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4rba5"]
shading_mode = 0

[sub_resource type="SphereMesh" id="SphereMesh_g0cyk"]

[sub_resource type="BoxMesh" id="BoxMesh_7xnjl"]
size = Vector3(0.05, 0.05, 0.05)

[sub_resource type="Environment" id="Environment_pgnn1"]
background_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t7xxh"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_d8kq4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ghg2i"]
transparency = 4
albedo_color = Color(1, 0, 0, 0)

[sub_resource type="ViewportTexture" id="ViewportTexture_kmwos"]
viewport_path = NodePath("Portal/LeftStencilViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wa4s7"]
resource_local_to_scene = true
shader = ExtResource("4_4hpxy")
shader_parameter/eye = null
shader_parameter/stencil_tex = SubResource("ViewportTexture_kmwos")

[sub_resource type="ViewportTexture" id="ViewportTexture_5ln43"]
viewport_path = NodePath("Portal/LeftPortalViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_mj8xj"]
viewport_path = NodePath("Portal/RightStencilViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nx0bu"]
resource_local_to_scene = true
shader = ExtResource("4_4hpxy")
shader_parameter/eye = 1
shader_parameter/stencil_tex = SubResource("ViewportTexture_mj8xj")

[sub_resource type="ViewportTexture" id="ViewportTexture_7bmtu"]
viewport_path = NodePath("Portal/RightPortalViewport")

[node name="StencilPortal" type="Node3D"]

[node name="Portal" type="MeshInstance3D" parent="." node_paths=PackedStringArray("other_portal")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)
layers = 16
cast_shadow = 0
mesh = SubResource("QuadMesh_23lrc")
surface_material_override/0 = SubResource("StandardMaterial3D_4rba5")
script = ExtResource("1_8cnrc")
other_portal = NodePath("../Portal2")

[node name="Sphere" type="MeshInstance3D" parent="Portal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.44187)
mesh = SubResource("SphereMesh_g0cyk")

[node name="Helper" type="Node3D" parent="Portal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3)

[node name="LeftPortalViewport" type="SubViewport" parent="Portal"]
size = Vector2i(1784, 1780)
render_target_update_mode = 4

[node name="XROrigin3D" type="XROrigin3D" parent="Portal/LeftPortalViewport"]

[node name="Camera3D" type="XRCamera3D" parent="Portal/LeftPortalViewport/XROrigin3D"]
cull_mask = 1048559
h_offset = -0.034
fov = 97.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Portal/LeftPortalViewport/XROrigin3D/Camera3D"]
visible = false
mesh = SubResource("BoxMesh_7xnjl")

[node name="LeftStencilViewport" type="SubViewport" parent="Portal"]
size = Vector2i(1784, 1780)
render_target_update_mode = 4

[node name="XROrigin3D" type="XROrigin3D" parent="Portal/LeftStencilViewport"]

[node name="Camera3D" type="XRCamera3D" parent="Portal/LeftStencilViewport/XROrigin3D"]
keep_aspect = 0
cull_mask = 16
environment = SubResource("Environment_pgnn1")
h_offset = -0.034
fov = 97.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Portal/LeftStencilViewport/XROrigin3D/Camera3D"]
visible = false
mesh = SubResource("BoxMesh_7xnjl")
surface_material_override/0 = SubResource("StandardMaterial3D_t7xxh")

[node name="RightPortalViewport" type="SubViewport" parent="Portal"]
size = Vector2i(1784, 1780)
render_target_update_mode = 4

[node name="XROrigin3D" type="XROrigin3D" parent="Portal/RightPortalViewport"]

[node name="Camera3D" type="XRCamera3D" parent="Portal/RightPortalViewport/XROrigin3D"]
cull_mask = 1048559
h_offset = 0.034
fov = 97.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Portal/RightPortalViewport/XROrigin3D/Camera3D"]
visible = false
mesh = SubResource("BoxMesh_7xnjl")

[node name="RightStencilViewport" type="SubViewport" parent="Portal"]
size = Vector2i(1784, 1780)
render_target_update_mode = 4

[node name="XROrigin3D" type="XROrigin3D" parent="Portal/RightStencilViewport"]

[node name="Camera3D" type="XRCamera3D" parent="Portal/RightStencilViewport/XROrigin3D"]
keep_aspect = 0
cull_mask = 16
environment = SubResource("Environment_pgnn1")
h_offset = 0.034
fov = 97.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Portal/RightStencilViewport/XROrigin3D/Camera3D"]
visible = false
mesh = SubResource("BoxMesh_7xnjl")
surface_material_override/0 = SubResource("StandardMaterial3D_t7xxh")

[node name="TopLeft" type="Node3D" parent="Portal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5002, 0.5, 0)

[node name="BottomRight" type="Node3D" parent="Portal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.5, 0)

[node name="Portal2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.638365, 0, -0.769734, 0, 1, 0, 0.769734, 0, 0.638365, 2.296, 1.78814e-07, -2.59288)
cast_shadow = 0
mesh = SubResource("QuadMesh_d8kq4")
surface_material_override/0 = SubResource("StandardMaterial3D_ghg2i")

[node name="Sphere" type="MeshInstance3D" parent="Portal2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.44187)
mesh = SubResource("SphereMesh_g0cyk")

[node name="Helper" type="Node3D" parent="Portal2"]

[node name="LeftTextureRect" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_wa4s7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 115.0
offset_top = -19.0
offset_right = 781.72
offset_bottom = 1144.05
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_5ln43")

[node name="RightTextureRect" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_nx0bu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -3.0
offset_right = 540.0
offset_bottom = 1129.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_7bmtu")
